版本号升级，优化打包方案