@@ -3,17 +3,96 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	
-	<parent>
-         <groupId>cn.jmicro</groupId>
-		 <artifactId>jmicro.parent</artifactId>
-		 <version>0.0.2-SNAPSHOT</version>
-    </parent>
-
+	<groupId>cn.jmicro</groupId>
+	<version>0.0.3-RELEASE</version>
 	<artifactId>jmicro.codegenerator</artifactId>
 	<packaging>jar</packaging>
 	<name>${project.artifactId}</name>
 	<description>codegenerator Module</description>
+	
+    <url>http://www.jmicro.cn</url>
+    <inceptionYear>2018</inceptionYear>
+    
+     <properties>
+    	<encoding>UTF-8</encoding>
+    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    	<java_source_version>1.8</java_source_version>
+        <java_target_version>1.8</java_target_version>
+        <junit_version>4.12</junit_version>
+        <cglib_version>2.2</cglib_version>
+        <mockito_version>2.18.3</mockito_version>
+        <argline>-server -Xms256m -Xmx512m -XX:PermSize=64m -XX:MaxPermSize=128m -Dfile.encoding=UTF-8
+            -Djava.net.preferIPv4Stack=true
+        </argline>
+        <maven_jar_version>3.0.2</maven_jar_version>
+        <maven_surefire_version>2.19.1</maven_surefire_version>
+        <maven_deploy_version>2.8.2</maven_deploy_version>
+        <maven_compiler_version>3.8.1</maven_compiler_version>
+        <maven_source_version>3.2.1</maven_source_version>
+        <maven_javadoc_version>3.0.1</maven_javadoc_version>
+        <maven_jetty_version>9.4.11.v20180605</maven_jetty_version>
+        <maven_checkstyle_version>3.0.0</maven_checkstyle_version>
+        <maven_jacoco_version>0.8.1</maven_jacoco_version>
+        <apache-rat-plugin.version>0.12</apache-rat-plugin.version>
+        <jmicro.version>0.0.3-RELEASE</jmicro.version>
+        <sl4j.version>1.7.30</sl4j.version>
+        <log4j.version>1.2.17</log4j.version>
+        <zookeeper.version>3.4.13</zookeeper.version>
+        <curator.version>4.0.1</curator.version>
+        <zkclient.version>2.0</zkclient.version>
+        <redis.version>2.10.0</redis.version>
+        <lombok.version>1.18.4</lombok.version>
+        <skip_maven_deploy>false</skip_maven_deploy>
+    </properties>
+    
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <organization>
+        <name>The Apache Software Foundation</name>
+        <url>http://www.apache.org/</url>
+    </organization>
+
+    <issueManagement>
+        <system>Github Issues</system>
+        <url>https://github.com/mynewworldyyl/jmicro/issues</url>
+    </issueManagement>
+	
+	<developers>
+	  <developer>
+	    <name>mynewworldyyl</name>
+	    <email>mynewworldyyl@gmail.com</email>
+	  </developer>
+	</developers>
+	
+	<scm>
+	  <connection>scm:git:https://github.com/mynewworldyyl/jmicro.git</connection>
+	  <developerConnection>scm:git:https://github.com/mynewworldyyl/jmicro.git</developerConnection>
+	  <url>https://github.com/mynewworldyyl/jmicro</url>
+	</scm>
+	
+	<distributionManagement>
+	      <repository>
+	        <id>releases</id>
+	        <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+	      </repository>
+	      <snapshotRepository>
+	        <id>snapshots</id>
+	        <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+	      </snapshotRepository>
+	 </distributionManagement>
+	
 	<dependencies>
+		<dependency>
+			<groupId>cn.jmicro</groupId>
+			<version>0.0.3-RELEASE</version>
+			<artifactId>jmicro.base</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>com.squareup</groupId>
 			<artifactId>javapoet</artifactId>
@@ -23,6 +102,7 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
+            <version>4.12</version>
         </dependency>
 	</dependencies>
 	
@@ -36,4 +116,73 @@
             </plugin>
         </plugins>
     </build>
+    
+    <profiles> 
+           <profile>
+            <id>release</id>
+             <activation>
+	            <!-- 设置默认激活这个配置 -->
+	            <activeByDefault>false</activeByDefault>
+        	</activation>
+            <build>
+                	<plugins>
+		                <plugin>
+		                <artifactId>maven-source-plugin</artifactId>
+		                <version>${maven_source_version}</version>
+		                <executions>
+		                    <execution>
+		                        <id>attach-sources</id>
+		                        <!-- <goals>
+		                            <goal>jar</goal>
+		                        </goals> -->
+		                        <phase>package</phase>
+				                  <goals>  
+				                     <goal>jar-no-fork</goal>  
+				                 </goals>
+		                    </execution>
+		                </executions>
+		            </plugin> 
+                    <plugin>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>${maven_javadoc_version}</version>
+                        <executions>
+                            <execution>
+                                <id>attach-javadoc</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                                <configuration>
+                                    <doclint>none</doclint>
+                                </configuration>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <show>public</show>
+                            <charset>${project.build.sourceEncoding}</charset>
+                            <encoding>${project.build.sourceEncoding}</encoding>
+                            <docencoding>${project.build.sourceEncoding}</docencoding>
+                            <links>
+                                <link>http://docs.oracle.com/javase/8/docs/api</link>
+                            </links>
+                        </configuration>
+                    </plugin>
+                    
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>3.0.1</version>
+                        <executions>
+                            <execution>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        </profiles>
+        
 </project>
